feat: fetch login, register

--- a/src/Components/Client/TextField/text-field.module.scss
+++ b/src/Components/Client/TextField/text-field.module.scss
@@ -30,6 +30,7 @@
     text-align: right;
     color:#FF4747;
     font-size: 12px;
-    margin-top: 3px;
+    margin-top: 5px;
     margin-right: 10px;
+    margin-bottom: -5px;
 }
