style: feat messenger

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -12,3 +12,39 @@
 a {
     text-decoration: none;
 }
+
+body {
+  overflow-y: hidden;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(170, 170, 170);
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
+.slider {
+    max-width: 500px;
+    margin: auto;
+}
+.flex-center {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
