--- a/src/Components/Messenger/messenger.module.scss
+++ b/src/Components/Messenger/messenger.module.scss
@@ -1,3 +1,12 @@
 .container {
     display: flex;
 }
+
+.group {
+    flex: 1;
+    background-color: #efefef;
+    height: calc(100vh - 64px);
+    display: flex;
+    flex-flow: column;
+
+}
