--- a/src/Components/Modal/modal.module.scss
+++ b/src/Components/Modal/modal.module.scss
@@ -40,6 +40,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
       &:hover {
         background-color: rgb(198, 193, 193);
       }
@@ -47,9 +48,8 @@
     .header {
       padding: 20px 35px;
       text-align: center;
-      font-size: 25px;
-      font-weight: 600;
-      // border-bottom: 2px solid #ddd;
+      font-size: 20px;
+      font-weight: 500;
     }
     .body {
       padding: 20px;
