--- a/src/Components/Layout/Button/button.module.scss
+++ b/src/Components/Layout/Button/button.module.scss
@@ -86,6 +86,7 @@
     @extend .btn;
     color: #00b132;
     border: 1px solid #00b132;
+    background-color: #fff;
     &:hover {
         color: #fff;
         background-color: #009a2c;
