--- a/src/Components/Messenger/messenger.module.scss
+++ b/src/Components/Messenger/messenger.module.scss
@@ -10,3 +10,9 @@
     flex-flow: column;
 
 }
+.settings {
+    width: 300px;
+    height: calc(100vh - 64px);
+    background-color: #fff;
+    border-left: 1px solid #efefef;
+}
