--- a/pages/messages/[type]/message.module.scss
+++ b/pages/messages/[type]/message.module.scss
@@ -50,7 +50,7 @@
       justify-content: center;
       align-items: center;
       cursor: pointer;
-      &:hover {
+      &:hover, &.active {
           background-color: #efefef;
       }
   }
