--- a/src/Components/Layout/Loading/loading.module.scss
+++ b/src/Components/Layout/Loading/loading.module.scss
@@ -1,12 +1,30 @@
 .wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &.fullScreen {
     position: fixed;
     z-index: 99999;
     background-color: #fff;
+    width: 100%;
+    height: 100%;
+  }
+}
+.loading {
+  display: block;
+  height: 20px;
+  animation: loading 1s linear infinite;
+}
+
+@keyframes loading {
+  0% {
+      transform: rotate(0deg)
+  }
+
+  100% {
+      transform: rotate(360deg)
+  }
 }
 .loader  {
     animation: rotate 1s infinite;  
