--- a/src/Components/Layout/Button/button.module.scss
+++ b/src/Components/Layout/Button/button.module.scss
@@ -46,19 +46,32 @@
         box-shadow: 0px 5px 10px rgba($color: #000000, $alpha: 0.3);
     }
 }
-
+.btn-loading {
+    @extend .btn;
+    background-color: #F6F5F5;
+    cursor: unset;
+    &:hover {
+        background-color: #F6F5F5;
+        text-decoration: none;
+    }
+}
 .default {
     @extend .btn;
     background-color: rgb(239, 239, 239);
-
     &:hover {
         background-color: rgb(220, 220, 220);
+    }
+    &.btnLoading {
+        @extend .btn-loading;
     }
 }
 
 .default-guest {
     @extend .btn, .btn-guest;
     background-color: #fff;
+    &.btnLoading {
+        @extend .btn-loading, .btn-guest;
+    }
 }
 
 .link {
@@ -66,9 +79,11 @@
     background-color: transparent;
     box-shadow: none;
     color: rgb(84, 39, 247);
-
     &:hover {
         text-decoration: underline;
+    }
+    &.btnLoading {
+        @extend .btn-loading;
     }
 }
 
@@ -80,6 +95,9 @@
     &:hover {
         background-color: #009a2c;
     }
+    &.btnLoading {
+        @extend .btn-loading;
+    }
 }
 
 .outline-primary {
@@ -90,6 +108,9 @@
     &:hover {
         color: #fff;
         background-color: #009a2c;
+    }
+    &.btnLoading {
+        @extend .btn-loading;
     }
 }
 
@@ -103,12 +124,18 @@
     @extend .btn, .btn-guest;
     background-color: #1876F2;
     color: #fff;
+    &.btnLoading {
+        @extend .btn-loading, .btn-guest;
+    }
 }
 
 .login-github {
     @extend .btn, .btn-guest;
     background-color: #000;
     color: #fff;
+    &.btnLoading {
+        @extend .btn-loading, .btn-guest;
+    }
 }
 
 .submit-login,
@@ -116,13 +143,12 @@
     @extend .btn, .btn-guest;
     background-color: #257E3E;
     color: #fff;
+    &.btnLoading {
+        @extend .btn-loading, .btn-guest;
+    }
 }
 
-.btnLoading {
-    @extend .btn, .btn-guest;
-    background-color: #F6F5F5;
-    cursor: unset;
-}
+
 
 @keyframes loading {
     0% {
