feat: create room

--- a/src/Components/Layout/Modal/modal.module.scss
+++ b/src/Components/Layout/Modal/modal.module.scss
@@ -58,6 +58,7 @@
       padding: 20px;
       display: flex;
       align-items: center;
+      gap: 10px;
       &.center {
         justify-content: center;
       }
