--- a/src/Components/Messenger/BoxMessage/ListMessage/list-message.module.scss
+++ b/src/Components/Messenger/BoxMessage/ListMessage/list-message.module.scss
@@ -9,17 +9,48 @@
   display: flex;
   gap: 10px;
   align-items: flex-start;
+  .groupContent {
+    max-width: 70%;
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+  }
   .content {
     background-color: #fff;
     color: #000;
     padding: 0.75em 1em;
-    border-radius: 20px;
-    max-width: 70%;
+    border-radius: 5px 20px 20px 5px;
     word-break: break-all;
+    max-width: 100%;
+    width: fit-content;
+    margin-bottom: 2px;
+    &:first-child {
+      border-radius: 20px 20px 20px 5px;
+    }
+    &:last-child {
+      border-radius: 5px 20px 20px 20px;
+    }
+
   }
   margin: 5px 0;
   &.current {
     justify-content: flex-end;
-    .content { background-color: #04D263; color: #fff; }
+    .content {
+      background-color: #04D263; color: #fff;
+      border-radius: 20px 5px 5px 20px;
+      &:first-child {
+        border-radius: 20px 20px 5px
+         20px;
+      }
+      &:last-child {
+        border-radius: 20px 5px 20px 20px;
+      }
+    }
+    .groupContent {
+      align-items: flex-end;
+    }
+  }
+  .content.single:last-child {
+    border-radius: 20px 20px 20px 20px;
   }
 }
