--- a/src/Components/Layout/Loading/loading.module.scss
+++ b/src/Components/Layout/Loading/loading.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 1;
   &.fullScreen {
     position: fixed;
     z-index: 99999;
