--- a/src/Components/Messenger/BoxMessage/box-message.module.scss
+++ b/src/Components/Messenger/BoxMessage/box-message.module.scss
@@ -13,7 +13,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 1em;
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid #e7e1e1;
 }   
 
 .navLeft {
