--- a/src/Components/Messenger/ListGroup/list-group.module.scss
+++ b/src/Components/Messenger/ListGroup/list-group.module.scss
@@ -1,11 +1,11 @@
 .wrapper {
     width: 375px;
     background-color: #fff;
-    border-right: 1px solid #efefef;
+    border-right: 1px solid #e7e1e1;
 }
 
 .wrapperHeader {
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid #e7e1e1;
     height: 80px;
     padding: 0 1em;
     display: flex;
