--- a/src/Components/Messenger/BoxMessage/InputBox/input-box.module.scss
+++ b/src/Components/Messenger/BoxMessage/InputBox/input-box.module.scss
@@ -44,3 +44,12 @@
     justify-content: center;
   }
 }
+
+.emoij {
+  position: relative;
+  .popover {
+    position: absolute;
+    bottom: calc(100% + 20px);
+    left: 0;
+  }
+}
