--- a/src/Components/Messenger/BoxMessage/InputBox/input-box.module.scss
+++ b/src/Components/Messenger/BoxMessage/InputBox/input-box.module.scss
@@ -1,29 +1,40 @@
+.wrapper {
+  background-color: #fff;
+}
+
 .inputBox {
   height: 56px;
-  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 2em;
   gap: 20px;
+
   button {
     background: none;
     outline: none;
     border: none;
-    width: 40px;
-    height: 40px;
+    min-width: 40px;
+    min-height: 40px;
+    max-width: 40px;
+    max-height: 40px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
     &:hover {
       background-color: #efefef;
     }
   }
+
   .inputMessage {
     flex: 1;
+    display: flex;
+    gap: 20px;
     input {
+      flex: 1;
       width: 100%;
       border-radius: 20px;
       padding: 0.75em 1em;
@@ -32,12 +43,14 @@
       outline: none;
     }
   }
+
   .advancedMessage {
     width: 80px;
     display: flex;
     justify-content: center;
     gap: 5px;
   }
+
   .btnSend {
     width: 40px;
     display: flex;
@@ -47,9 +60,46 @@
 
 .emoij {
   position: relative;
+
   .popover {
     position: absolute;
     bottom: calc(100% + 20px);
     left: 0;
+  }
+}
+
+.listImage {
+  display: flex;
+  gap: 10px;
+  flex-flow: wrap;
+  padding: 5px;
+}
+
+.image {
+  width: 84px;
+  height: 84px;
+  border: 2px solid rgb(182, 182, 182);
+  border-radius: 5px;
+  position: relative;
+
+  span {
+    position: absolute;
+    top: -12px;
+    right: -12px;
+    width: 30px;
+    height: 30px;
+    background-color: rgb(218, 215, 215);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  img {
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
