--- a/src/Components/Messenger/BoxMessage/ListMessage/list-message.module.scss
+++ b/src/Components/Messenger/BoxMessage/ListMessage/list-message.module.scss
@@ -1,4 +1,3 @@
-
 .listMessage {
   flex: 1;
   overflow-y: auto;
@@ -13,16 +12,19 @@
   gap: 10px;
   color: rgb(129, 129, 129);
 }
+
 .message {
   display: flex;
   gap: 10px;
   align-items: flex-start;
+
   .groupContent {
     max-width: 70%;
     display: flex;
     flex-flow: column;
     align-items: flex-start;
   }
+
   .content {
     background-color: #fff;
     color: #000;
@@ -32,32 +34,64 @@
     max-width: 100%;
     width: fit-content;
     margin-bottom: 2px;
+
     &:first-child {
       border-radius: 20px 20px 20px 5px;
     }
+
     &:last-child {
       border-radius: 5px 20px 20px 20px;
     }
 
   }
+
   margin: 5px 0;
+
+  .images {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: flex-start;
+    gap: 10px;
+
+    .img {
+      flex: 1 1 150px;
+      height: 150px;
+      width: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+  }
+
   &.current {
     justify-content: flex-end;
+
     .content {
-      background-color: #04D263; color: #fff;
+      background-color: #04D263;
+      color: #fff;
       border-radius: 20px 5px 5px 20px;
+
       &:first-child {
-        border-radius: 20px 20px 5px
-         20px;
+        border-radius: 20px 20px 5px 20px;
       }
+
       &:last-child {
         border-radius: 20px 5px 20px 20px;
       }
     }
+
     .groupContent {
       align-items: flex-end;
     }
+
+    .images {
+      justify-content: flex-end;
+    }
   }
+
   .content.single:last-child {
     border-radius: 20px 20px 20px 20px;
   }
