--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-
+@import "common";
 .slider {
   max-width: 500px;
   margin: auto;
@@ -8,8 +8,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-* {
-  box-sizing: border-box;
 }
