--- a/pages/messages/[type]/message.module.scss
+++ b/pages/messages/[type]/message.module.scss
@@ -70,4 +70,19 @@
   background-color: #fff;
   border-left: 1px solid #e7e1e1;
   padding: 5px;
+  display: block;
+  &.active {
+    display: none;
+  }
+}
+
+@media (max-width: 1300px) {
+  .settings {
+    position: fixed;
+    right: -100%;
+    &.active {
+      display: block;
+      right: 0;
+    }
+  }
 }
