--- a/src/Components/Messenger/Nav/nav.module.scss
+++ b/src/Components/Messenger/Nav/nav.module.scss
@@ -11,7 +11,7 @@
     align-items: center;
 
     .navBar {
-        width: 80px;
+        width: 60px;;
         @extend .flexCenter;
         button {
             @extend .flexCenter;
@@ -25,6 +25,7 @@
     }
     .logo {
         flex: 1;
+        margin-left: 10px;
     }
     .multiFeature {
         display: flex;
