--- a/src/Components/Guest/client.module.scss
+++ b/src/Components/Guest/client.module.scss
@@ -12,7 +12,7 @@
 	margin-bottom: 50px;
 	line-height: 1.25;
 	font-size: 64px;
-	color: #a6ff00;
+	color: #379c55;
 	padding: 0 1em;
 	text-shadow: 0 2px 5px;
 }
