--- a/src/Components/Messenger/BoxMessage/ListMessage/list-message.module.scss
+++ b/src/Components/Messenger/BoxMessage/ListMessage/list-message.module.scss
@@ -60,6 +60,7 @@
       img {
         width: 100%;
         height: 100%;
+        min-width: 150px;
         object-fit: cover;
         border-radius: 10px;
       }
