--- a/src/Components/Messenger/Nav/nav.module.scss
+++ b/src/Components/Messenger/Nav/nav.module.scss
@@ -9,7 +9,7 @@
     color: #fff;
     display: flex;
     align-items: center;
-
+    justify-content: space-between;
     .navBar {
         width: 60px;;
         @extend .flexCenter;
@@ -73,5 +73,11 @@
             }
         }
     
+    }
+}
+
+@media (max-width: 575px) {
+    .logo {
+        display: none;
     }
 }
